      Albert Cahalan <albert@users.sourceforge.net>

    * Now uses "AUDIO_S16SYS" when initializing audio system
      (on Linux/Mac/BeOS); helps sound under Linux on Mac hardware.
      Albert Cahalan <albert@users.sourceforge.net>
  
  * Other improvements:
    -------------------
    * Thumbnail of selected image now shown on "Erase this image?"
      confirmation pop-up.

    * Improved 'rubber band line' and stamp outline colors ("XOR" code)
      to make such lines easier to see on certain colors.
    
    * Added beige and tan colors.  Changed "Lime" to "Neon Green."
      Renamed "Fuschia" to "Magenta."  Tweaked some color values.
      Moved grey/silver next to black/white.
      Albert Cahalan <albert@users.sourceforge.net>
 
    * getpixel function now considers edges as extending to infinity
      (to improve Magic tools like 'Blur')
      Albert Cahalan <albert@users.sf.net>

    * drawtext_callback() prototype forces useless arg.; voided it
      Albert Cahalan <albert@users.sf.net>

    * Simplified strip_trailing_whitespace() function; now O(n)
      Albert Cahalan <albert@users.sf.net>

    * Increased maximum number of stamps that can be loaded at once from
      256 to 512.
      Albert Cahalan <albert@users.sourceforge.net>

    * The "noquit" option now prevents the [Escape] key from quitting
      Tux Paint.  ([Alt]+[F4] and the window close button still work.)

    * Tux Paint can now be quit with [Shift]+[Control]+[Escape], as well.
      (Useful for when "noquit" and "fullscreen" are set, and the
      [Alt]+[F4] combination is not possible.)
  
  * Bug fixes:
    -------------------
    * Lockfile now cleared upon exit, allowing Tux Paint to be re-launched
      immediately.
      
    * Hotspot for 'tiny' crosshair mouse pointer shape is now
      correct in 16x16 size (used on Mac OS X).

    * Delete thumbnails from ".thumbs" subdirectory.
      Marcin 'Shard' Konicki <shard at beosjournal.org>
